# yeti

./: .gitattributes  .gitignore  .pylintrc  .style.yapf  .travis.yml  0001-Fix-docs-scripts-and-uwsgi-systemd-service.patch  CHANGELOG.md  Dockerfile  IMO-6614  LICENSE  LICENSE.md  Pipfile  QQ  README.md  SECURITY.md  SUMMARY.md  Trojan-FGBA-lnk  Vagrantfile  analytics.py  as_debug_file.txt  celerybeat-schedule  celerybeat-schedule.db  celeryconfig.py  core.feed  core.feed.FeedEngine  disable_routing.sh  enable_routing.sh  feeds.py  forward_port.sh  integrity.py  logger.py  malcom.conf  malcom.conf.example  malcom.py  model.py  netsniffer.py  package-lock.json  package.json  pyproject.toml  pyproject.toml.poetry  (+17 more)
.github/: ISSUE_TEMPLATE.md  release.yml
.github/workflows/: black.yml  dfiq-consistency.yml  docker-build.yml  docker-publish-dev  docker-publish-dev.yml  docker-publish.yml  docker.yml  feedtest.yml  python-package.yml  ruff.yml  typecheck.yml  unittests.yml
Malcom/: __init__.py  celeryctl.py
Malcom/analytics/: analytics.py  messenger.py
Malcom/auxiliary/: async_resolver.py  toolbox.py
Malcom/config/: malconf.py
Malcom/feeds/: MalcomBaseFeed.py  MalwareDomainsDotCom.py  _FEED_TEMPLATE.py  _malwarepatrol.py  _openbl.py  _palevotracker.py  _siri_urz.py  _urlquery.py  _zeusgameover.py  alienvault.py  asprox_tracker.py  cybercrimetracker.py  dshield-as16276.py  dshield-as3215.py  dshield_as16276.py  dshield_as3215.py  dshield_suspiciousdomains_high.py  dshield_suspiciousdomains_low.py  dshield_suspiciousdomains_medium.py  feed.py  feodo_tracker.py  feodotracker.py  internal_dump_dataset.py  malcode.py  malware_domain_list.py  malware_domains_dot_com.py  malwared_ru.py  malwaredomains.py  malwarepatrol.py  malwaretraffickanalysis.py  mdlhostlist.py  mdliplist.py  mdltracker.py  messenger.py  openbl.py  palevo_tracker.py  palevotracker.py  siri-urz.py  spyeyebinaries.py  spyeyecnc.py  (+13 more)
Malcom/model/: datatypes.py  model.py  user_management.py
Malcom/networking/: flow.py  messenger.py  netsniffer.py
Malcom/shmem/: SharedData.py
Malcom/sniffer/: flow.py  messenger.py  netsniffer.py
Malcom/tasks/: __init__.py  mdl.py  other.py  scheduler.py  spyeye.py  zeus.py
Malcom/web/: api.py  messenger.py  webserver.py  websockets.py
analytics/: hash_file.py  process_hostname.py  process_hostnames.py  process_url.py  resolve_hostnames.py  virustotal.py
bootstrap/css/: custom.css
contrib/: README.md
core/: __init__.py  analysis.py  analytics.py  analytics_tasks.py  chromadb_client.py  constants.py  database.py  database_arango.py  errors.py  events.py  export.py  feed.py  group.py  helpers.py  interfaces.py  internals.py  investigation.py  logger.py  scheduling.py  taskmanager.py  taskscheduler.py  user.py  validator_observable.py  yeti_plugins.py
core/auth/: common.py
core/common/: misp_to_yeti.py  utils.py
core/config/: celeryctl.py  celeryimports.py  config.py  mongoengine_extras.py
core/datatypes/: __init__.py  element.py  file.py  hash.py  hostname.py  ip.py  link.py  mongoengine_extras.py  tag.py  url.py
core/db/: datatypes.py  mongoengine_extras.py
core/entities/: __init__.py  actor.py  campaign.py  company.py  entity.py  exploit.py  exploit_kit.py  malware.py  ttp.py
core/entities_legacy/: exploit.py  malware.py
core/events/: consumers.py  message.py  producer.py
core/exports/: __init__.py  export.py  export_templates.py
core/indicators/: __init__.py  indicator.py  regex.py  yara_rules.py
core/indicators_legacy/: __init__.py  yara_rules.py
core/internals/: __init__.py  internals.py
core/migrations/: arangodb.py  migration.py
core/observables/: __init__.py  asn.py  bitcoin.py  certificate.py  email.py  file.py  hash.py  helpers.py  hostname.py  ip.py  mac_address.py  observable.py  path.py  tag.py  text.py  url.py  utils.py
core/observables_legacy/: __init__.py  bitcoin.py  email.py  hash.py  helpers.py  ip.py  mac_address.py  tag.py
core/schemas/: __init__.py  audit.py  dfiq.py  entity.py  graph.py  indicator.py  loader.py  model.py  observable.py  package.py  rbac.py  relationship.py  roles.py  tag.py  task.py  template.py  user.py
core/web/: __init__.py  api.py  app.py  helpers.py  json.py  webapp.py
datatypes/: element.py
doc/: Makefile  README.md  api.rst  conf.py  extending.rst  getting-started.rst  index.rst  installation.rst  objects.rst  quick-intro.rst  troubleshooting.rst  use-cases.rst
docker/: README.md
docker/dev/: Dockerfile  docker-compose.yaml
extras/: Dockerfile  bootstrap.sh  centos_bootstrap.sh  debian_bootstrap.sh  ubuntu_bootstrap.sh  unlock.py  yeti_to_elasticsearch.py
extras/docker/: Dockerfile  README.md  docker-compose-full.yml  docker-compose.yml  docker-entrypoint.sh
extras/git/: ruff-precommit-check.sh
extras/nginx/: yeti
extras/scripts/: import_misp_galaxies.py  unlock.py  yeti_to_elasticsearch.py
extras/systemd/: yeti_analytics.service  yeti_beat.service  yeti_exports.service  yeti_feeds.service  yeti_inline.service  yeti_oneshot.service  yeti_uwsgi.service  yeti_web.service
extras/templates/: csv_export.jinja2  json_export.jinja2
extras/yetictl/: cli.py
feeds/: alienvault.py  celeryimport.py  dshield-as16276.py  dshield-as3215.py  feed.py  malcode.py  malwarepatrol.py  mdlhostlist.py  mdliplist.py  mdltracker.py  openbl.py  palevotracker.py  siri-urz.py  spyeyebinaries.py  spyeyecnc.py  spyeyeconfigs.py  spyeyedropzones.py  suspiciousdomains.py  torexitnodes.py  zeusconfigs.py  zeusdropzones.py  zeusgameover.py  zeustracker.py
helpers/: local_upload.py  requirements.txt  run_feeds.py
networking/: flow.py  netsniffer.py
pyeti/: pyeti.py
templates/: base.html  dataset.html  dataset.html-orig  dynamic_nodes.html  feeds.html  flash.html  index.html  nodes.html  sniffer.html  sniffer_new.html
tests/: analytics_test.py  entities_test.py  feeds.py  helpers.py  migration.py  observables_test.py  runtest.py  testScheduledAnalytics.py  testanalytics.py  testfeeds.py  testrun.py  tor_exit_nodes_test.py  unlock.py
tools/: validate_dfiq_archive.py
yetictl/: cli.py
(+825 files in other folders)
