[project]
name = "yeti"
version = "0.1.0"
description = "Yeti"
authors = [
    {name = "Thomas Chopitea", email = "tomchop@gmail.com"},
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "uvicorn>=0.34",
    "fastapi>=0.115",
    "python-arango>=8.1.2",
    "celery>=5.3.4",
    "validators>=0.34.0",
    "python-jose[cryptography]>=3.4",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6,<0.0.19",
    "pandas>=2.1.1",
    "redis>=5.0.0",
    "click>=8.1.7",
    "authlib>=1.2.1",
    "itsdangerous>=2.1.2",
    "pyyaml>=6.0.1",
    "parameterized>=0.9.0",
    "yara-python>=4.5.0",
    "idstools>=0.6.5",
    "tqdm>=4.67.1",
    "plyara>=2.2",
    "minijinja>=2.9.0",
    "beautifulsoup4>=4.13.4",
    "artifacts",
    "google-auth>=2.39.0",
    "websockets>=16.0",
    "chromadb>=1.5.7",
]

[dependency-groups]
dev = [
    "pylint>=2.16.1",
    "ty>=0.0.59",
    "httpx>=0.23.3",
    "ruff>=0.15.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
plugins = [
    "pymisp>=2.4.176",
    "otxv2>=1.5.12",
    "shodan>=1.30.0",
    "timesketch-api-client>=20260312",
    "pyopenssl>=23.3.0",
    "ipwhois>=1.2.0",
    "maclookup>=1.0.3",
    "censys>=2.2.10",
    "artifacts @ git+https://github.com/forensicartifacts/artifacts.git@main",
    "pygithub>=2.3.0",
]
s3 = [
    "boto3>=1.35.22",
]

[tool.ruff]
# Enable the isort rules.
lint.extend-select = ["I"]
lint.ignore = ["E402", "F401"]
# exclude files in the /deprecated/ directories
exclude = ["deprecated"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
# Start with core/; widen (plugins/, yetictl/) in follow-ups.
include = ["core"]

[tool.ty.rules]
# Phase 2 ratchet. These rules currently fire across the (previously
# un-type-checked) code, so they are downgraded to non-blocking warnings while
# every *other* ty rule is enforced at error level. CI runs with
# --exit-zero-on-warning: warnings are visible but green, errors fail. Flip
# these back to "error" (fixing the instances) one rule at a time. Counts are
# from the initial rollout against ty 0.0.59.
unresolved-attribute = "warn"       # 138 — ArangoYetiConnector mixin + union attr access
invalid-argument-type = "warn"      # 35
not-subscriptable = "warn"          # 16
unsupported-operator = "error"      # 0 — fixed `in ("users")` typo + api_keys/None guards
invalid-assignment = "warn"         # 14
invalid-attribute-override = "warn"  # 12
not-iterable = "warn"               # 11
invalid-return-type = "warn"        # 11
invalid-method-override = "warn"    # 8
call-non-callable = "warn"          # 7
invalid-type-form = "error"         # 0 — conlist() → Annotated[list[str], Field(...)]
unresolved-import = "warn"          # 3 — optional deps not present in lint env
no-matching-overload = "error"      # 0 — cast the isinstance-narrowed path for open()
missing-argument = "warn"           # 1
unknown-argument = "error"          # 0 — fixed a stray strict= kwarg on cls.load

# Promoted to error (instances fixed; kept enforced so they can't regress).
possibly-missing-submodule = "error"
unused-type-ignore-comment = "error"

[tool.uv.sources]
artifacts = { git = "https://github.com/forensicartifacts/artifacts.git", rev = "main" }
